force-app/main/default/objects/INTGR_Status_Mapping__c/INTGR_Status_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>NICC-032393 - Status mapping between Sales force and Service Now.</description>
    <label>INTGR Status Mapping</label>
</CustomObject>