force-app/main/default/objects/INTGR_Status_Mapping__c/fields/INTGR_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>INTGR_Account_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>INTGR Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>