force-app/main/default/objects/INTGR_Status_Mapping__c/fields/INTGR_Assignment_Group__c.field-meta.xml
<CustomField>
    <fullName>INTGR_Assignment_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>INTGR_Assignment_Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>