force-app/main/default/objects/INTGR_Status_Mapping__c/fields/INTGR_Current_Status__c.field-meta.xml
<CustomField>
    <fullName>INTGR_Current_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>INTGR Current Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>