force-app/main/default/objects/INTGR_Status_Mapping__c/fields/INTGR_Status_Updated__c.field-meta.xml
<CustomField>
    <fullName>INTGR_Status_Updated__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>INTGR Status Updated</label>
    <length>50</length>
    <type>Text</type>
</CustomField>